# maicrosoft

./: .gitignore  CLAUDE.md  Makefile  README.md  VibingDiary_maicrosoft_init.md  pyproject.toml
examples/simple_workflow/: README.md  plan.yaml
gui/: .env.example  docker-compose.yml  meta-plan-simple.yaml  meta-plan.yaml
gui/backend/: Dockerfile  requirements.txt
gui/backend/src/: config.py  database.py  main.py
gui/backend/src/middleware/: auth.py  rbac.py
gui/backend/src/models/: __init__.py  nodelog.py  plan.py  planversion.py  runhistory.py  secret.py  template.py  user.py
gui/backend/src/routers/: auth.py  compile.py  execution.py  github.py  plans.py  primitives.py  secrets.py  templates.py  validation.py
gui/backend/src/services/: agent_zero_client.py  maicrosoft_bridge.py  secret_manager.py
gui/frontend/: index.html  nginx.conf  package.json  tailwind.config.js
gui/frontend/src/: App.tsx  index.css
gui/frontend/src/api/: client.ts
gui/frontend/src/pages/: Dashboard.tsx  GitHubAnalyzer.tsx  Login.tsx  Register.tsx  RunDetails.tsx  RunHistory.tsx  SecretManager.tsx  Settings.tsx  TemplateGallery.tsx  WorkflowBuilder.tsx  WorkflowList.tsx
gui/frontend/src/stores/: authStore.ts  (+1 more)
primitives/_meta/: registry.yaml  schema.json
primitives/particles/: api_route.yaml  branch.yaml  cache.yaml  compile_app.yaml  db_model.yaml  db_query.yaml  file_op.yaml  http_call.yaml  llm_call.yaml  log.yaml  loop.yaml  queue.yaml  scaffold_backend.yaml  scaffold_frontend.yaml  transform.yaml  ui_component.yaml  ui_page.yaml  websocket_handler.yaml
src/maicrosoft/: __init__.py  cli.py
src/maicrosoft/api/: __init__.py
src/maicrosoft/compiler/: __init__.py  metaplan.py  n8n.py
src/maicrosoft/core/: __init__.py  models.py
src/maicrosoft/llm/: __init__.py  orchestrator.py
src/maicrosoft/mcp/: __init__.py  server.py
src/maicrosoft/registry/: __init__.py  loader.py  registry.py
src/maicrosoft/validation/: __init__.py  policy.py  validator.py
tests/: test_compiler.py  test_llm.py  test_mcp.py  test_particles.py  test_validation.py
(+14 files in other folders)
